[REFACTOR] AUTH 관련 리팩토링